--- a/src/components/Tag/style.scss
+++ b/src/components/Tag/style.scss
@@ -5,20 +5,19 @@
     width: 115px;
     height: 25px;
     border-radius: 10px;
-    margin: 5px;
+    margin-right: 5px;
 }
 
 .tag_text{
     width: 100%;
     text-align: center;
-    font-size: 0.6rem;
+    font-size: 14px;
     color: #FFFFFF;
     padding: 5px 0;
     font-family: Montserrat;
-    font-family: Montserrat;
     font-size: 14px;
     font-weight: 500;
-    line-height: 20px;
+    line-height: 19.96px;
     letter-spacing: 0em;
     text-align: center;
 
